almost finished my corrections

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -79,15 +79,10 @@ Link\"{o}ping, Sweden\\
 
 
 \begin{floatbox}{}
-
 % DG : I wonder if a paragraph summarizing the extent of the problem with the salix data should not be provided here. Either within the text, or a box. But we need to convingly show how large is this problem even for such an extensive dataset
 % AC : I like the box idea. Since we refer to the Salix data throughout the manuscript it makes sense to make it stand out. 
-    
     \indent As a case study, we use an extensively sampled \emph{Salix}-galler-parasitoid meta-network. This dataset consists of a single community type sampled across Europe; willow (\emph{Salix}) species, willow-galling sawflies, and their natural enemies. The data were collected over 29 years at 374 unique locations across Europe, with a total of 641 site visits. Each site visit can be considered as a network in its own right and an independent sample from which to build the meta-network. The meta-network consists of 1,173 different interactions between 52 \emph{Salix} nodes, 92 herbivore nodes, and 126 natural enemy nodes. The high spatiotemporal resolution of this network and the unusually high sampling effort implemented at the site level makes this dataset particularly well suited for illustrating the difficulties in completely sampling a network and testing Bayesian approaches to overcome these difficulties.
-
-
     \indent We may begin by comparing the frequency of of co-occurence of taxa to reveal the challenge of having sufficient sampling to be confident that an interaction does not occur. Most pairs of species (3986/4992 \emph{Salix}-galler pairs and  9794/12096 galler-natural enemy pairs) are never found co-occurring, and for species that did occur the number of co-occurrences was generally low (mean=4.24, var=36.3 for \emph{Salix}-galler pairs; mean=3.87, var=28.8 for galler-natural enemy pairs; Fig.~\ref{histograms}A-B). For those species which interacted when co-occurring, the incidence of interaction was also low (mean=12.0, var=155 for \emph{Salix}-galler pairs; mean=4.04, var=29.3 for galler-natural enemy pairs; Fig.~\ref{histograms}C-D). Only 2.82\% of \emph{Salix}-galler pairs and 7.76\% of galler-natural enemy pairs were observed interacting at all. Thus, even in the most extensive data set that we could find, limited sampling is clearly a major source of uncertainty. This dataset also illustrates the potential for increased sampling to not necessarily reveal more interactions as a pair of species that interacts in some cases may not be observed interacting in all cases (Fig.~\ref{histograms}E-F). 
-
   \caption{\emph{Salix} dataset}
   \label{box1}
 \end{floatbox}
@@ -157,17 +152,10 @@ Link\"{o}ping, Sweden\\
   As a solution towards deciding whether unobserved interactions were undetected due to sampling, or whether they truly do not occur,~\citet{Weinstein2017} used repeated sampling rounds to estimate the daily probability of detecting a hummingbird interaction, and to thereby model the observation and process mechanisms. While conceptually attractive, this approach is unsuitable for interactions occurring over longer time scales (e.g., associations between hosts and parasitoids with a single generation per year), or very rare interactions which might not occur on any of the sampling days or might involve individuals of a species that are not under observation. What is worse, the problem persists that if a given interaction is not observed on a given day, this could be either because it was impossible that day despite being otherwise feasible [$P(X|D=1,L=1)=0$], because interaction between the two did occur but could not be observed [$P(D|X=1,L=1)=0$], or from any combination of the two. From a conceptual perspective, this approach will thus fail to satisfactorily distinguish between sources of uncertainty. Most importantly, if two species are never observed co-occurring during several days of sampling then we have learned nothing about their probability of interacting if they should ever co-occur. In other words, there is no information about interactions without co-occurrence.
 
 
-  An added complication is that not all sources of uncertainty are proportional to sample size. To record an interaction between A and B, we need to identify both partners correctly (a non-trivial problem in many food webs; e.g.~\citet{Kaartinen2011,Roslin2016}) and be able to resolve all interactions with a similar likelihood. For both molecular~\citep{} and rearing~\citep{} techniques, certain types of interactions may go unnoticed due to technical challenges. This can bias the set of recorded interactions.
-  % DG : I propose to maintain part of this paragraph that was commented out, just to keep the transition. 
-  The bottom line is that separating different sources of uncertainty is difficult indeed. As an alternative to abandoning empirical networks or continuing to ignore the uncertainty inherent in undetected observations, we propose that some insight regarding the detectability of interactions between species not found co-occurring may be gained from data on other species between which interactions are known to be feasible. 
+  An added complication is that not all sources of uncertainty are proportional to sample size. To record an interaction between A and B, we need to identify both partners correctly (a non-trivial problem in many food webs; e.g.~\citealp{Kaartinen2011,Roslin2016}) and be able to resolve all interactions with a similar likelihood. For both molecular and rearing techniques, certain types of interactions may go unnoticed due to technical challenges~\citep{Wirta2016}. This can bias the set of recorded interactions. The bottom line is that separating different sources of uncertainty is difficult indeed. As an alternative to abandoning empirical networks or continuing to ignore the uncertainty inherent in undetected observations, we propose that some insight regarding the detectability of interactions between species not found co-occurring may be gained from data on other species between which interactions are known to be feasible. 
 
   % [[How do we define samples? For the Kopelke set we use sampling occasion, but what about sampling twice as many trees on the same day and same place? Does that count? Does it have to be spatially and/or temporally separated? Is it relevant??]]
   % [[Pretty sure this will always depend on the study - also seems like a pretty large digression.]]
-
-  % The bottom line is that separating different sources of uncertainty is difficult indeed. In the best of all possible worlds, we might use an experimental approach to estimate detection uncertainty by creating replicate cases where the interaction really occurs and then evaluating the fraction of cases where the interaction is detected. Yet, as anyone attempting these experiments will know, most interaction partners are notoriously unwilling to collaborate. Gallers refuse to lay eggs on their host plants in captivity (ref ref) and parasitoids decline to attack their hosts when experimentally introduced (Gariepy 2017; ref ref). If we introduce only one of the components (as in the cases where we expose a set of hosts to parasitism; ref ref; Gripenberg et al. xxx) then we are already confounding multiple levels of uncertainty since it is not certain whether the interaction will occur or whether we can detect it. To perform these experiments in a comprehensive and reliable manner, we will then need to replicate a large number of interactions in a comprehensive experiment across space. This type of “cafeteria experiments in space” is not only unfeasible, but also undermines our original objective: If the local occurrence of interactions is uninformative regarding the underlying probabilities of occurrence, then is not likely to be worthwhile collecting these local interaction matrices in the first place. <deep sigh and forget that section? > 
-
-
-  % As an alternative to abandoning empirical networks or continuing to ignore the uncertainty inherent in undetected observations, we propose that some insight regarding the detectability of interactions between species not found co-occurring may be gained from data on other species between which interactions are known to be feasible. If we use this information obtain the joint probability of detection and process (e.g. to glean information regarding at how many sites the species are found interacting across the entire dataset), and assuming that most of this pattern is due to variation in detection rate, then insights into the incidence of interactions between species may be gleaned from the accumulation rate of positive interactions at sites were interaction is possible (i.e. with at least one observation of a positive interaction) [this reasoning to be further formalised]
 
 
 \section*{A naive quantification of interaction probability and uncertainty}
@@ -192,23 +180,11 @@ Link\"{o}ping, Sweden\\
   The maximal likelihood estimate (MLE) of $\lambda$ is straightforward to find given $k$ and $n$:
 
       \begin{equation}
-        \theta_{MLE} = \frac{k}{n}  .
+        \lambda_{MLE} = \frac{k}{n}  .
         \label{theta_MLE}
       \end{equation}
 
-  The variance of a Bernoulli experiment is $n\lambda$(1-$\lambda$). It is important to remember that this variance describes the variability of the number of success[es] $k$ for $n$ trials and is not the variance associated with the estimation of $\lambda$.
-  Given this variance, it is possible to compute the confidence interval for the MLE of $\lambda$ using any of several methods, including the \emph{Wilson score interval}, the \emph{Clopper-Pearson interval}, and the \emph{Agresti-Coull Interval} (for details, see [\citealp{}]). Finding this estimate is therefore quite straightforward, but it nonetheless has two drawbacks. First, $\lambda$ is not a single point estimate but rather a random variable with a given uncertainty, the distribution of which is unknown. This means that even if $k = 0$ in a given sample, this does not necessarily imply that the two species will never interact. What it implies is that no interaction is the most likely situation but there is nonetheless a significant chance that the two species \emph{could} interact. In contrast with the situation where $k>0$, when we are sure that an interaction is feasible, 
-  % (in which case, the ratio $k/n$ is smaller than $n$ because of detection and process uncertainty),  % This parenthetical makes the sentence very long. Is it necessary?
-  we are not sure that absence of interactions is caused by $L=0$. Second, and most importantly, the number of trials $n$ might be very low in many instances (and some pairs of species might not have been documented as co-occuring in even one case). Consequently, the uncertainty in the estimation of $\lambda$ might be considerable. In Fig.~\ref{upper_limits}, we derive the Clopper-Pearson interval to explore how the estimate of $\lambda$ varies with sample size. At a small sample size, the 95\% confidence interval spans all values of $\lambda$. To establish that species are not interacting with any acceptable certainty requires tens of observations of the two species co-occurring but not interacting.
-  % Is the Clopper-Pearson interval the one in Dom's code snippets? If so, this is Fig.~\ref{Salix_cdfs}
-
-% DG: The following should be removed to avoid repetitions
-%  The situation where $k = 0$ is also problematic because we have very little information with which to estimate $\lambda$, in particular when $n$ is also small. We therefore propose a Bayesian approach to solve this problem, building on two relevant features of such statistics: the posterior distribution of parameter estimates and usage of prior information. Before moving to this direction, we will first take time to better describe what is exactly meant by an interaction probability and appropriately define sources of uncertainty.
-
-
-%  So many sources of interaction pooled into a single entity; hard to estimate.
-
-% MLE is zero if no interaction is detected, but there may still be a substantial probability of interaction should the two species co-occur. [This is particularly important in the context of a changing world, where species not co-occurring today – or species not detected co-occurring today – may well do so tomorrow, forming complex interactions.]
+  The variance of a Bernoulli experiment is $n\lambda$(1-$\lambda$). It is important to remember that this variance describes the variability of the number of successes $k$ for $n$ trials and is not the variance associated with the estimation of $\lambda$. Given this variance, it is possible to compute the confidence interval for the MLE of $\lambda$ using any of several methods, including the \emph{Wilson score interval}, the \emph{Clopper-Pearson interval}, and the \emph{Agresti-Coull Interval} (for details, see [\citealp{}]). Finding this estimate is therefore quite straightforward, but it nonetheless has two drawbacks. First, $\lambda$ is not a single point estimate but rather a random variable with a given uncertainty, the distribution of which is unknown. This means that even if $k = 0$ in a given sample, this does not necessarily imply that the two species will never interact. What it implies is that no interaction is the most likely situation but there is nonetheless a substantial chance that the two species \emph{could} interact. In contrast with the situation where $k>0$, when we are sure that an interaction is feasible, we are not sure that absence of interactions is caused by $L=0$. Second, and most importantly, the number of trials $n$ might be very low in many instances (and some pairs of species might not have been documented as co-occuring even once). Consequently, the uncertainty in the estimation of $\lambda$ might be considerable. In Fig.~\ref{upper_limits}, we derive the Clopper-Pearson interval to explore how the estimate of $\lambda$ varies with sample size. At a small sample size, the 95\% confidence interval spans all values of $\lambda$. To establish that species are not interacting with any acceptable certainty requires tens of observations of the two species co-occurring but not interacting. As most data sets will not have such extensive sampling across all observations, we can use a Bayesian approach to supplement what data we do have with other sources of information.
 
 
 \section*{Bayesian approach to infer interaction probabilities}
@@ -221,11 +197,11 @@ Link\"{o}ping, Sweden\\
       We here adopt a Bayesian approach to estimate the distribution of the parameter $\lambda$. According to Bayes principle, the posterior distribution of $\lambda$ is:
 
       \begin{equation}
-        \underbrace{P(\lambda|X,n)}_{Posterior} = \frac{\overbrace{P(X|\lambda,n)}^{Likelihood}\overbrace{P(\lambda)}^{Prior}}{\underbrace{P(X|N)}_{Normaliser}} .
+        \underbrace{P(\lambda|k,n)}_{Posterior} = \frac{\overbrace{P(k|\lambda,n)}^{Likelihood}\overbrace{P(\lambda)}^{Prior}}{\underbrace{P(k|N)}_{Normaliser}} .
         \label{posterior}
       \end{equation}
 
-      According to the above description, the likelihood is simply the binomial distribution (Eq.~\ref{likelihood}). Since $\lambda$ is a probability it is bounded between 0 and 1 and consequently the most appropriate prior distribution is the beta:
+      According to the above description, the likelihood is simply the binomial distribution (Eq.~\ref{likelihood}). Since $\lambda$ is a probability, it is bounded between 0 and 1 and the most appropriate prior distribution is the beta:
 
       \begin{equation}
         \lambda \sim Beta(\alpha,\beta) , \label{prior}
@@ -240,13 +216,9 @@ Link\"{o}ping, Sweden\\
       \end{equation}
 
       
+      \noindent where the function $B$ is the beta function. The posterior distribution of $\lambda$ therefore follows the beta distribution with new parameters $\alpha'= \alpha+k$ and $\beta'=\beta+n-k$. The weight of the prior on the posterior distribution can be understood from these parameter definitions: the difference between the posterior and the prior will increase with $k$ and $n-k$. In other words, the distribution of $\lambda$ for better-sampled pairs of species will rely less on the information used to build the prior distribution and depend more on the observed data.
+      When plotted, we find the shape of the distribution gets narrower with $k$ and $n$ (Fig.~\ref{Salix_pdfs}). 
 
-%      \begin{equation}
-%        Beta(\alpha+k,\beta+n-k) = \frac{\Gamma(\alpha+k)\Gamma(\beta+n-k)}{\Gamma(\alpha+\beta+n)} . \label{betafunction}
-%      \end{equation}
-
-      \noindent where the function $B$ is the beta function. The posterior distribution of $\lambda$ therefore follows the beta distribution with new parameters $\alpha'= \alpha+k$ and $\beta'=\beta+n-k$. The weigth of the prior on the posterior distribution is understood from these definition of the parameters: the difference between the posterior and the prior will increase with $k$ and $n-k$. When plotted, we find the shape of the distribution gets narrower with $k$ and $n$ (Fig.~\ref{Salix_pdfs}). We also find an important difference between the salix-gallers and gallers-parasitoids because of the differences in the prior distributions. 
-      %
       %  The posterior distribution of $\theta$ could be computed with R with the following command:
       %
       %
@@ -259,14 +231,14 @@ Link\"{o}ping, Sweden\\
 
 %DG: otherwise the difference between the two interaction types is very interesting and useful to show the effect of the priors. Bravo ! 
       \begin{figure}[ht]
+        \caption{Using prior distribution based on the \emph{Salix}-galler and galler-parasitoid networks in~\citet{Barbour2016}, we can calculate posterior distributions for the probability of interaction ($\lambda$) between two species that have not yet been observed interacting. Here we show posterior distributions for each $\lambda$ in each network ranging from the prior distribution ($n=0$ observed co-occurrence) to the distribution obtained when the pair of species has been observed co-occurring 100 times. The distribution narrows and approaches zero as the sample size increases. \textbf{A)} The posterior distributions for the \emph{Salix}-galler component are always wider and farther from zero than those for \textbf{B)} the galler-parasitoid component. This is likely because the prior distribution for the galler-parasitoid component of the network was both narrower and had a mean closer to that in the~\citet{Kopelke2017} data than did the \emph{Salix}-galler component.}
         \label{Salix_pdfs}
-        \caption{Using prior distribution based on the \emph{Salix}-galler and galler-parasitoid networks in~\citet{Barbour2016}, we can calculate posterior distributions for the probability of interaction ($\lambda$) between two species that have not yet been observed interacting. Here we show posterior distributions for each $\lambda$ in each network ranging from the prior distribution (N=0 observed co-occurrence) to the distribution obtained when the pair of species has been observed co-occurring 100 times. The distribution narrows and approaches zero as the sample size increases. \textbf{A)} The posterior distributions for the \emph{Salix}-galler component are always wider and farther from zero than those for \textbf{B)} the galler-parasitoid component. This is likely because the prior distribution for the galler-parasitoid component of the network was both narrower and had a mean closer to that in the~\citet{Kopelke2017} data than the \emph{Salix}-galler component.}
         \includegraphics*[width=.8\textwidth]{figures/Salix_Galler_pdfs_increasing_N.eps}
         \end{figure}
 
     \subsection*{Moments and other properties}
 
-      The fact that the posterior distribution of $\lambda$ follows a beta distribution makes it straightforward to compute moments and other properties. 
+      The fact that the posterior distribution of $\lambda$ follows a beta distribution makes it straightforward to compute moments and other properties. These moments may then be used when calculating higher-order network properties.
 
       The \textbf{average} of $\lambda$ is: 
           \begin{equation}
@@ -323,16 +295,16 @@ Link\"{o}ping, Sweden\\
           %  Where $vecC$ is a vector of known connectances for a set of networks. 
 
 
-      \subsubsection*{Degree distribution for the species in the network - or - Interaction probabilities in a similar network}.
+      \subsubsection*{Degree distribution or interaction probabilities}
 
           % [[Should we still have this? At the workshop we talked about how interaction probabilities depend on the degrees of both species and so I'm using predicted interaction probabilities (degreeA*degreeB) in the galler example. A writeup for that process follows the original text:]]
 
 %DG: I think so, it is a very useful proposition in the paper to increasingly improve the quality of the prior. I just tried to cut it down in order to follow the above layout. 
 %DG: actually, once I got down to the following section, I realized that the example is based on the degree distribution, so there is not much choice to keep it
 
-          The degree of a node in a network is defined as the number of interactions it has to other nodes. The degree distribution of a network is then the probability distribution of these degrees over the whole network and the standardised degree could therefore be interpreted as an interaction probability. It is consequently possible to use the degree distribution to inform the prior distribution. The degree distribution could come from several networks, from a similar network (e.g. a known network at slightly different location) or from the network of interest if interaction probabilities for some species are already documented. The latter approach allows us to apply information from known, abundant species to the rarest species for which interactions are less frequently documented. The procedure for the estimation of the hyper parameters follows the same approach as described above for connectance except that each measurement is at the individual species level instead of the network level.
-         
-          If our focal network describes a similar system to that in a known network, we can use the distribution of interaction probabilities in that network to inform our prior. The probability of any interaction $L_ij$ depends on the degrees of species $i$ and $j$. Using normalised degrees $\Delta_i$ and $\Delta_j$ (i.e., degrees divided by the number of species in the network), we can obtain the probability of interaction $L_ij$=$\Delta_i\times\Delta_j$. The distribution of these interaction probabilities derived from a similar network or a suite of networks can be used to establish a prior distribution before any data from the focal network are collected. We could also use this approach to build a prior distribution using known interaction probabilities for some species in the focal network. The latter approach allows us to apply information from known, abundant species to the rarest species for which interactions are less frequently documented. The procedure for the estimation of the hyper parameters follows the same approach as described above for connectance except that each measurement is at the individual interaction level instead of the network level.
+          The degree of a node in a network is defined as the number of interactions it has to other nodes. The degree distribution of a network is then the probability distribution of these degrees over the whole network and the standardised degree could therefore be interpreted as an interaction probability. It is consequently possible to use the degree distribution to inform the prior distribution. The degree distribution could come from several networks, from a similar network (e.g. a known network at slightly different location) or from the network of interest if interaction probabilities for some species are already documented. The latter approach allows us to apply information from known, abundant species to the rarest species for which interactions are less frequently documented. 
+
+          If our focal network describes a similar system to that in a known network, we can use the distribution of interaction probabilities in that network to inform our prior. The probability of any interaction $L_ij$ depends on the degrees of species $i$ and $j$. Using normalised degrees $\Delta_i$ and $\Delta_j$ (i.e., degrees divided by the number of species in the network), we can obtain the probability of interaction $L_ij$=$\Delta_i\times\Delta_j$. Similar to the procedure for degree distribution, the distribution of these interaction probabilities derived from a similar network or a suite of networks can be used to establish a prior distribution before any data from the focal network are collected. For distributions of either degrees or interaction probabilities, the procedure for the estimation of the hyper parameters follows the same approach as described above for connectance except that each measurement is at the individual interaction level instead of the network level.
 
 
       \subsubsection*{Trait-matching function}. 
@@ -341,7 +313,7 @@ Link\"{o}ping, Sweden\\
 %DG: I tried to expand just a little, but I don't want to get lost in this paragraph as it would be a distraction. We should basically mention it as a possibility.
 
           The last approach we envision to document the prior distribution of $\lambda$ is to use the outcome of a trait-matching model, provided such a model has been documented using external data and relevant traits are available. 
-          In such as case, the prior distribution would follow the function $P(\lambda|\mathbf{T})=f(\mathbf{T})$ based on a set of traits for both species $\mathbf{T}$. There are several techniques available to perform this inference of interaction probability, some of which are bayesian, and we refer to ~\citep{Bartomeus2016} and \citep{Weinstein2017} for recent reviews about this topic. Note that in this case the prior might not be beta distributed and numerical methods might be required to compute the posterior distribution.  
+          In such as case, the prior distribution would follow the function $P(\lambda|\mathbf{T})=f(\mathbf{T})$ based on a set of traits for both species $\mathbf{T}$. There are several techniques available to perform this inference of interaction probability, some of which are Bayesian, and we refer to ~\citep{Bartomeus2016} and \citep{Weinstein2017} for recent reviews about this topic. Note that in this case the prior might not be beta distributed and numerical methods might be required to compute the posterior distribution.  
 
 %DG: I want to be sure that the following example is clear and understandable for everyone. Tomas, Kate, both of you can follow the entire logic ? Would you be able to reproduce it using the R code ? 
 
@@ -352,35 +324,40 @@ Link\"{o}ping, Sweden\\
 
   % Are degree distributions valid priors for interaction probabilities in a unipartite web? For the Salix-gall dataset we're using interaction probabilities as priors (since the degree of both Salix and galler matter)... maybe we should rephrase this to predict the degree of species $i$ based on the degrees of 10 other species in the network?
   The Bayesian framework can be illustrated with a simple quantitative example. Suppose we have $n = 10$ observations of co-occurrence between species $i$ and species $j$ in a given time interval and area, and $k = 3$ observations of interactions. The maximum likelihood estimate of the interaction probability (Box 1) is simply $\lambda_{MLE} = 3/10 = 0.3$. 
-  % We should probabaly have a value  on the interaction probablitity that differs from the average of the degree distrbution
   
 %DG: the following example should provide first the real degree, and below the normalized degree. We need to help the reader translating degrees into interaction probabilities
 
-  Now consider we know that species $i$ is known to interact with 10 species (other than species $j$), which have the following normalised degrees:
+  Now consider we know that species $i$ is known to interact with 10 species (other than species $j$), which have the following degrees:
 
     \vspace{12pt}
     \noindent\emph{
-       degree = c(0.66, 0.18, 0.12, 0.16, 0.84, 0.32, 0.12, 0.76, 0.06, 0.04)
+      degree=c(14, 4, 2, 3, 17, 6, 2, 15, 1, 1)
         }.
       \vspace{12pt}
 
-    If the network has 20 species total, then species $i$ has a normalised degree of 0.5 and
+    If the network has 20 species total, this gives the normalised degrees:
+
+    \vspace{12pt}
+    \noindent\emph{
+      norm\_degree=c(0.65, 0.20, 0.10, 0.15, 0.85, 0.30, 0.10, 0.75, 0.05, 0.05)}.
+      \vspace{12pt}
+
+    then species $i$ has a normalised degree of 0.55 (it interacts with species $j$ and 10 other species) and
     we can use this to obtain the following set of interaction probabilities for species $i$ and each of its interaction partners:
 
     \vspace{12pt}
     \noindent\emph{
-       int\_probs = c(0.33, 0.09, 0.06, 0.08, 0.42, 0.16, 0.06, 0.38, 0.03, 0.02) }.
+       int\_probs = c(0.358, 0.110, 0.055, 0.082, 0.468, 0.165, 0.055, 0.412, 0.028, 0.028) }.
       \vspace{12pt}
 
-    The mean of these interaction probabilities is 0.163, approximately half the $\lambda_{MLE}$ obtained from the observed data. We can use the distribution of these interaction probabilities as our prior distribution and estimate the uncertainty surrounding our $\lambda_{MLE}$. With some simple R code (function calculate\_parameters, \emph{Appendix S2}), we obtain prior parameters $\alpha$=1.050830 and $\beta$=5.365892. Using these priors in equations~\ref{mean} and~\ref{variance} above (or in the R function calculate\_distribution in \emph{Appendix S2}), we find a prior mean interaction probability of 0.16376436 and a prior variance of 0.02134199. Adding the observed data ($n=10$, $k=3$) and using the same code, we obtain posterior parameters $\alpha'$=4.05083 and $\beta'$=12.36589 and a posterior distribution of $\lambda$ with mean 0.247 and variance 0.011. Comparing the posterior distribution to the prior, we see that the posterior is closer to the observed data and that the additional data has reduced the variance. We may also wish to calculate a credible interval (analogous to the frequentist confidence interval). This is also quite straightforward in R (see function credible\_interval in \emph{Appendix S2}). In this case, a 95\% credible interval for the mean of theta is (0.077, 0.474).
+    The mean of these interaction probabilities is 0.176, approximately two-thirds the $\lambda_{MLE}$ obtained from the observed data. We can use the distribution of these interaction probabilities as our prior distribution and estimate the uncertainty surrounding our $\lambda_{MLE}$. With some simple R code (function ``calculate\_parameters", \emph{Appendix S2}), we obtain prior parameters $\alpha$=0.998 and $\beta$=4.63. Using these priors in equations~\ref{mean} and~\ref{variance} above (or in the R function ``calculate\_distribution" in \emph{Appendix S2}), we find a prior $\bar\lambda$=0.177 and var($\lambda$)=0.026. Adding the observed data ($n=10$, $k=3$) and using the same code, we obtain posterior parameters $\alpha'$=4.00 and $\beta'$=11.6 and a posterior $\bar\lambda$=0.256 and var($\lambda$)=0.012. Comparing the posterior distribution to the prior, we see that the posterior is closer to the observed data and that the additional data has reduced the variance. We may also wish to calculate a credible interval (analogous to the frequentist confidence interval). This is also quite straightforward in R (see function ``credible\_interval" in \emph{Appendix S2}). In this case, a 95\% credible interval for $\bar\lambda$ is (0.080, 0.491).
 
-    Now, consider the case where the two species have never been observed interacting across $n$ trials, i-e. $k=0$. The question is then ``what is the probability these two species do not interact''? Since it is not possible to prove that the two species could never interact (strickly speaking, in such an approach $\lambda=0$ is impossible), given the framework above we must fix a threshold below which we consider that there is no interaction ($\lambda \sim 0$). We call this threshold probability $\lambda*$. We then use the cumulative distribution function to estimate $P(\lambda<\lambda*|L=0,n)$ for different $n$. The 
-    function plot\_precision in \emph{Appendix S2} calculates distribution function for $\lambda*$ with an increasing number of trials. The figure below illustrates this distribution for $\lambda*$=0.1. This yields a surprising result: it requires \textgreater24 observations of no interactions to be 95\% sure that the interaction probability is smaller than 0.1 (recall Fig.~\ref{upper_limits}). Note the special case where there is no observation of the two species co-occurring, $n = 0$  In this situation, the posterior distribution converges to the prior distribution since the data include no information on the probability with which species might interact should they co-occur; see above).
+    Now, consider the case where the two species have never been observed interacting across $n$ trials, i-e. $k=0$. The question is then ``what is the probability these two species do not interact''? Since it is not possible to prove that the two species could never interact (strickly speaking, in this approach $\lambda=0$ is impossible), given the framework above we must fix a threshold below which we consider that there is no interaction ($\lambda \sim 0$). We call this threshold probability $\lambda*$. We then use the cumulative distribution function to estimate $P(\lambda<\lambda*|L=0,n)$ for different $n$. The function ``plot\_precision" in \emph{Appendix S2} calculates distribution function for $\lambda*$ with an increasing number of trials. This yields a surprising result: it requires \textgreater24 observations of no interactions to be 95\% sure that the interaction probability is smaller than $\lambda*$=0.1 (recall Fig.~\ref{upper_limits}). Note the special case where there is no observation of the two species co-occurring, $n = 0$.  In this situation, the posterior distribution converges to the prior distribution since the data include no information on the probability with which species might interact should they co-occur).
 
 
 \section*{Scaling up uncertainty from pairwise interactions to networks}
 
-    It is fairly straightforward to compute most of network metrics when the different $\lambda$ of the adjacency matrix are known, without variance~\citep{Poisot2016}. Several of these metrics derive directly from quantitative indices of network structure which are equivalent to $\lambda$; the remainder, originally defined for binary networks, can be adjusted to account for interaction probabilities between zero and one. It is not as easy, however, to understand how the uncertainty in these estimated interaction probabilities influences network metrics. Computation of these metrics involves non-linear functions and therefore, because of Jensen's inequality (which states that the average of non-linear function of a stochastic variable differs from the function of the average of that variable), any uncertainty in $\lambda$s could bias both the mean and variance of a network metric. For instance, assume that among all pairs of species with few observed co-occurrences there are many pairs which truly interact. If we begin with no observed links for these pairs, then correcting for these false absences will inflate the number of links and consequently influence metrics such as connectance, nestedness, and degree distribution. While we can, as described above, calculate these network metrics using fixed estimates for $\lambda$, no analytical solution currently exists for uncertain $\lambda$. Instead we must rely on computer simulations. In the following section, we will provide an empirical example, based on the data set published by~\citet{Kopelke2017} (see Box~\ref{box1}). We will show how the uncertainty arising from both absences of co-occurrences and false absences of interactions impact these metrics. %We find uncertainty influences both the average and the variance of network metrics, putting in perspective traditional network comparison studies where these metrics are assumed to be fixed entities. 
+    It is fairly straightforward to compute most of network metrics when the different $\lambda$ of the adjacency matrix are known, without variance~\citep{Poisot2016}. Several of these metrics derive directly from quantitative indices of network structure which are equivalent to $\lambda$. The remainder, originally defined for binary networks, can be adjusted to account for interaction probabilities between zero and one. It is not as easy, however, to understand how the uncertainty in these estimated interaction probabilities influences network metrics. Computation of these metrics involves non-linear functions and therefore, because of Jensen's inequality (which states that the average of a non-linear function of a stochastic variable differs from the function of the average of that variable), any uncertainty in $\lambda$s could bias both the mean and variance of a network metric. For instance, assume that among the pairs of species with few observed co-occurrences there are many pairs which truly interact. If we begin with no observed links for these pairs, then correcting for these false absences will inflate the number of links and consequently influence metrics such as connectance, nestedness, and degree distribution. While we can, as described above, calculate these network metrics using fixed estimates for $\lambda$, no analytical solution currently exists for uncertain $\lambda$. Instead we must rely on computer simulations. In the following section, we will provide an empirical example based on an extremely well-sampled \emph{Salix}-galler-natural enemy system (see Box~\ref{box1};~\citealp{Kopelke2017}). We will show how the uncertainty arising from both absences of co-occurrences and false absences of interactions impact these metrics. %We find uncertainty influences both the average and the variance of network metrics, putting in perspective traditional network comparison studies where these metrics are assumed to be fixed entities. 
 
 
 
